# llm-otel

./: .gitignore  HANDOFF_TO_KIRO.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  regression.yml
.kiro/specs/001-reference-app/: tasks.md
.kiro/specs/002-gateway/: tasks.md
.kiro/specs/003-eval-harness/: tasks.md
.kiro/specs/004-reporting/: tasks.md
.kiro/specs/005-real-models/: tasks.md
.kiro/specs/006-health-and-ci/: tasks.md
.kiro/specs/007-auth/: design.md  spec.md  tasks.md
.kiro/specs/008-async-retry/: design.md  spec.md  tasks.md
.kiro/specs/009-token-counting/: design.md  spec.md  tasks.md
.kiro/specs/010-semantic-cache/: design.md  spec.md  tasks.md
.kiro/specs/011-circuit-breaker/: design.md  spec.md  tasks.md
.kiro/specs/012-conversation-persistence/: design.md  spec.md  tasks.md
.kiro/specs/013-embedding-routing/: design.md  spec.md  tasks.md
.kiro/steering/: architecture.md  coding-standards.md  otel.md  product.md  testing.md  workflow.md
app/: main.py
app/routes/: answer_routed.py  classify_complexity.py  conversation_turn.py
app/schemas/: answer_routed_request.py  answer_routed_response.py  classify_complexity_request.py  classify_complexity_response.py  conversation_turn_request.py  conversation_turn_response.py
app/services/: context_manager.py  documents.py  retrieval.py  routing.py
evals/assertions/: context_checks.py  routing_checks.py  schema_checks.py
evals/runners/: common.py  run_answer_routed_eval.py  run_classify_eval.py  run_conversation_turn_eval.py
gateway/: cache.py  client.py  cost_model.py  otel_setup.py  policies.py  semconv.py  telemetry.py
reporting/: make_report.py
scripts/: benchmark_before_after.py  loadgen.py  make_report.py
tests/: test_evals.py  test_gateway.py  test_health.py  test_reporting.py  test_routes.py  test_schemas.py  test_semconv.py  test_services.py
